--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
-:root {
-  background-color: #242424;
-}
-#root {
-  height: 98vh;
+#ballpit {
+  height: 100vh;
   width: 100%;
+}
+
+body {
+  margin: 0;
 }
