--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,7 @@
-#ballpit {
-  height: 100vh;
-  width: 100%;
+:root {
+  background-color: #242424;
 }
-
-body {
-  margin: 0;
+#root {
+  height: 98vh;
+  width: 100%;
 }
